# transient-universe

./: .gitignore  .project-settings.yml  .travis.yml  DistrbDataSets.prof  DockerHaskell  Dockerfile  LICENSE  Procfile  README.md  bash.exe.stackdump  buildrun.bat  buildrun.sh  circle.yml  client.yaml  distributedApps.prof  docker-compose.yml  execthirdlinedocker.sh  hasrocket.prof  loop.sh  nohup.out  stack-ghcjs.yaml  stack.yaml  stack.yaml1  test5.prof  transient-universe.cabal  transient-universe.cabal.lkshs  transient-universe.cabal.lkshw  transient.lkshf
app/client/Transient/Move/Services/: MonitorService.hs
app/server/Transient/Move/Services/: MonitorService.hs  controlServices.hs  executor.hs
examples/: Atm.hs  DistrbDataSets.hs  PiDistribCountinuous.hs  PiDistribOnce.hs  distributedApps.hs  distributedExamples.hs  distributedKeyValueServant.hs  runweb2.sh  webMapReduce.hs  webapp.hs  widgets.hs
examples/static/out.jsexe/: all.js  lib.js  out.js  out.stats  rts.js
src/Transient/: DDS.hs  MapReduce.hs  Move.hs
src/Transient/Move/: Internals.continueRemoteClosure.hs  Internals.hs  Internals.loggedmodified.hs  PubSub.hs  Services.hs  Utils.hs
src/Transient/Move/Services/: Executor.hs
src/client/Transient/Move/Services/: MonitorService.hs
tests/: Dockerfile  Parameters.hs  Stream.hs  Test.hs  Test2.hs  Test3.hs  TestSuite.hs  TestSuite1.hs  Testspark.hs  api.hs  art.md  build.sh  buildrun.sh  cell.hs  cert.pem  certificate.csr  certificate.pem  chen.hs  distributedApps.hs  dockerclean.sh  execcluster.sh  ghcjs-websockets.hs  hasrocket.hs  hasrocket.prof  iterate.sh  key.pem  nikita.hs  raft.hs  rundevel.sh  snippet  streamMonad.hs  test22.hs  test5.hs  testRestService.hs  testService.hs  teststream.hs  teststreamsocket.hs  teststruct.hs  testtls.hs
tests/hasrocket1/: Main.hs  hasrocket-benchmark-transient.cabal  hasrocket.hs
tests/job/: Job.hs
