name: transient-universe
version: 0.5.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: agocorona@gmail.com
homepage: https://github.com/transient-haskell/transient-universe
bug-reports: https://github.com/transient-haskell/transient-universe/issues
synopsis: Remote execution and map-reduce: distributed computing for Transient
description:
    See <http://github.com/transient-haskell/transient>.
category: Control, Distributed Computing
author: Alberto G. Corona
extra-source-files:
    ChangeLog.md README.md
    app/client/Transient/Move/Services/MonitorService.hs
    app/server/Transient/Move/Services/MonitorService.hs

source-repository head
    type: git
    location: https://github.com/transient-haskell/transient-universe

library

    if !impl(ghcjs >=0.1)
        exposed-modules:
            Transient.Move.Services

    if impl(ghcjs >=0.1)
        build-depends:
            ghcjs-base -any,
            ghcjs-prim -any
    else
        build-depends:
            HTTP -any,
            TCache >= 0.12,
            case-insensitive -any,
            directory -any,
            filepath -any,
            hashable -any,
            iproute -any,
            network -any,
            network-info -any,
            network-uri -any,
            vector -any,
            websockets -any,
            process -any,
            random -any,
            text -any

    exposed-modules:
        Transient.Move
        Transient.MapReduce
        Transient.Move.Internals
        Transient.Move.Utils
    build-depends:
        base >4 && <5,
        bytestring -any,
        containers -any,
        mtl -any,
        stm -any,
        time -any,
        transformers -any,
        transient >= 0.6.0.0
    default-language: Haskell2010
    hs-source-dirs: src .

executable monitorService

    if !impl(ghcjs >=0.1)
        build-depends:
            transformers -any,
            transient >= 0.6.0.0,
            transient-universe,
            process,
            directory
        hs-source-dirs: app/server/Transient/Move/Services
    else
        hs-source-dirs: app/client/Transient/Move/Services
    main-is: MonitorService.hs
    build-depends:
        base >4 && <5


    default-language: Haskell2010
    ghc-options: -threaded -rtsopts

executable test-transient1

    if !impl(ghcjs >=0.1)
        build-depends:
            mtl -any,
            transient >= 0.5.9.2,
            random -any,
            text -any,
            containers -any,
            directory -any,
            filepath -any,
            stm -any,
            HTTP -any,
            network -any,
            transformers -any,
            process -any,
            network -any,
            network-info -any,
            bytestring -any,
            time -any,
            vector -any,
            TCache >= 0.12,
            websockets -any,
            network-uri -any,
            case-insensitive -any,
            hashable -any
    main-is: TestSuite.hs
    build-depends:
        base >4
    default-language: Haskell2010
    hs-source-dirs: tests src .
    ghc-options: -threaded -rtsopts


test-suite test-transient

    if !impl(ghcjs >=0.1)
        build-depends:
            mtl -any,
            transient >= 0.5.9.2,
            random -any,
            text -any,
            containers -any,
            directory -any,
            filepath -any,
            stm -any,
            HTTP -any,
            network -any,
            transformers -any,
            process -any,
            network -any,
            network-info -any,
            bytestring -any,
            time -any,
            vector -any,
            TCache >= 0.12,
            websockets -any,
            network-uri -any,
            case-insensitive -any,
            hashable -any
    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    build-depends:
        base >4
    default-language: Haskell2010
    hs-source-dirs: tests src .
    ghc-options: -threaded -rtsopts
